Fixed spacing issure

--- a/app/src/pages/styles/Chat.scss
+++ b/app/src/pages/styles/Chat.scss
@@ -52,7 +52,7 @@
     .message {
         border-radius: 1rem;
         font-size: 16px;
-        padding: .25rem 1rem;
+        padding: .75rem 1rem;
 
         > * {
             overflow-wrap: normal;
@@ -93,6 +93,7 @@
             border: none;
 
             cursor: pointer;
+            margin: .25rem 0;
             padding: 0;
         }
 
@@ -106,7 +107,7 @@
 form {
     display: flex; 
     align-items: center;
-    gap: 0.5rem;
+    gap: .5rem;
 
     margin: auto;
     width: 100%;
